# dhaka-pathfinder

./: .gitignore  DEMO_DAY.md  DOCUMENTATION.md  HEURISTIC.md  QA.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
1/: ARCHITECTURE_FOR_BEGINNERS.md  DEFENSE_SCRIPT.md  PRESENTATION.md  PROBLEM_STATEMENT.md  README.md  pytest.ini
1/data/: dhaka_bbox_90.3600_23.7400_90.4200_23.8000_drive.pkl
1/dhaka_pathfinder/: __init__.py  config.py  cost_model.py  osm_loader.py
1/results/: REPORT.md  algorithm_summary.csv  comparison_matrix.csv  context_summary.csv  heuristic_summary.csv
1/scripts/: generate_report.py  generate_sample_maps.py  generate_scenario_maps.py
1/tests/: test_algorithms.py  test_heuristics.py  test_integration.py  test_new_factors.py
2/: ALGORITHMS.md  PITCH.md  README.md  app.py  assignment.md  guide.md  pyproject.toml  requirements.txt  run.sh
2/data/: dhaka_fuel_stations.pkl
2/fuel_csp/: __init__.py  analyzer.py  cli.py  constraints.py  dhaka.py  osm_data.py  problem.py  synthetic.py  visualizer.py
2/fuel_csp/algorithms/: __init__.py  arc_consistency.py  backtracking.py  base.py  heuristics.py  min_conflicts.py
2/notebooks/: fuel_csp_analysis.ipynb
2/results/: QA.md  REPORT.md  experiments_raw.csv  experiments_summary.csv
2/scripts/: build_notebook.py  generate_report.py  run_experiments.py
2/tests/: conftest.py  test_algorithms.py  test_analyzer.py  test_arc_consistency.py  test_cli.py  test_constraints.py  test_dhaka_mode.py  test_problem.py  test_visualizer_extras.py
3/: README.md  app.py  partB.txt  plan.md  requirements.txt  run.sh  statement.md
3/AI_Lab_report_template/: ai-lab-report.cls  main.tex  references.bib
3/docs/: MATH_EXPLAINED.md  PART1_foundations.md  PART2_applications.md  PART3_viva.md  PART4_problem_design.md  PART5_code_defense.md  PART6_decision_making.md  PART7_literature_applied.md  PITCH.md  START_HERE.md  Untitled
3/report/: main.tex  references.bib
3/scripts/: build_pdfs.sh  pdf-tables.lua
3/src/: pso_wifi_placement.py  rl_experiments.py  rl_water_tank.py
3/tests/: conftest.py  test_pso_wifi.py  test_rl_water_tank.py
dhaka_pathfinder/: analyzer.py  cli.py  config.py  context.py  engine.py  heuristics.py  synthetic_data.py  visualizer.py
scripts/: run_comparison.py
tests/: conftest.py  test_cost_model.py
(+21 files in other folders)
