[project]
name = "dhaka-pathfinder"
version = "2.0.0"
description = "Realistic multi-factor pathfinding simulation over Dhaka's OpenStreetMap road network"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Lab Assignment" }]

dependencies = [
    "osmnx>=2.0.0",
    "networkx>=3.3",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "folium>=0.17",
    "plotly>=5.24",
    "streamlit>=1.39",
    "streamlit-folium>=0.23",
    "click>=8.1",
    "rich>=13.9",
    "tqdm>=4.66",
    "pyarrow>=17.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.scripts]
dhaka-pathfinder = "dhaka_pathfinder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dhaka_pathfinder"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that load the full Dhaka graph (run with pytest -m slow)",
]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]
