[project]
name = "fuel-csp-solver"
version = "1.0.0"
description = "CSP/COP solver for an urban fuel-crisis vehicle-to-station allocator. Compares 5 search algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Lab Assignment 2" }]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "click>=8.1",
    "rich>=13.9",
    "tabulate>=0.9.0",
    "tqdm>=4.66",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "nbformat>=5.10",
]

[project.scripts]
fuel-csp = "fuel_csp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fuel_csp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
